package interfaces.pb;

message MetaData {
  optional uint32 TestMe = 1;
}

